src/test/resources/purescript_examples/failing/Let.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith CycleInDeclaration\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('test')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSLetImpl(Let)
              PsiElement(let)('let')
              PsiElement(whitespace)(' ')
              PSValueDeclarationImpl(ValueDeclaration)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('x')
                  PsiElement(whitespace)(' ')
                PSNamedBinderImpl(NamedBinder)
                  <empty list>
                PsiElement(=)('=')
                PsiElement(whitespace)(' ')
                PSValueImpl(Value)
                  PSPrefixValueImpl(PrefixValue)
                    PSVarImpl(Var)
                      PSQualifiedImpl(Qualified)
                        PSIdentifierImpl(identifier)
                          PsiElement(identifier)('x')
                          PsiElement(whitespace)(' ')
              PsiElement(in)('in')
              PsiElement(whitespace)(' ')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PSIdentifierImpl(identifier)
                        PsiElement(identifier)('x')
                        PsiElement(whitespace)('\n')
